force-app/main/default/objects/Mix_Category__c/Mix_Category__c.object-meta.xml
<CustomObject>
    <label>Mix Category</label>
    <nameField>
        <label>Mix Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mix Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>