force-app/main/default/objects/Mix_Category__c/fields/Number_of_Trails__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trails__c</fullName>
    <label>Number of Trails</label>
    <summaryForeignKey>Recommended_Trail__c.Mix_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>