force-app/main/default/objects/Mix_Category__c/fields/Recommended_Badge_Mix__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Badge_Mix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended Badge Mix</label>
    <referenceTo>Recommended_Badge_Mix__c</referenceTo>
    <relationshipLabel>Mix Categories</relationshipLabel>
    <relationshipName>Mix_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>