force-app/main/default/objects/Mix_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Recommended_Badge_Mix__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>