force-app/main/default/objects/Mix_Category__c/listViews/Ben_s_Mix_Categories.listView-meta.xml
<ListView>
    <fullName>Ben_s_Mix_Categories</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Recommended_Badge_Mix__c</field>
        <operation>equals</operation>
        <value>Ben&apos;s Mix</value>
    </filters>
    <label>Ben&apos;s Mix Categories</label>
</ListView>