force-app/main/default/objects/Mix_Category__c/listViews/Mix_Categories_without_Badges.listView-meta.xml
<ListView>
    <fullName>Mix_Categories_without_Badges</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_of_Badges__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Mix Categories without Badges</label>
</ListView>