force-app/main/default/objects/Mix_Category__c/listViews/Orphaned_Mix_Categories.listView-meta.xml
<ListView>
    <fullName>Orphaned_Mix_Categories</fullName>
    <columns>NAME</columns>
    <columns>Recommended_Badge_Mix__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Mix_Category__c.Standard</value>
    </filters>
    <filters>
        <field>Recommended_Badge_Mix__c</field>
        <operation>equals</operation>
    </filters>
    <label>Orphaned Mix Categories</label>
</ListView>